<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title"> The Movies</string>
    <string name="mv_name">Aquaman</string>
    <string name="mv_date">December 7, 2018</string>
    <string name="mv_genre">Action, Adventure, Fantasy</string>
    <string name="mv_desc">Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half Atlantean brother and true heir to the throne.</string>
    <string name="overview">Overview</string>
    <string name="year">2019</string>
    <string name="gdk">Google Developer Kejar</string>
    <string name="mv_photo">movie photo</string>
    <string name="bg_mv_photo">background movie photo</string>


    <string-array name="movie_name">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Once Upon a Deadpool</item>
        <item>Dragon: The Hidden World</item>
        <item>Dragon Ball Super:Broly</item>
        <item>Robin Hood</item>
        <item>The Girl in the Spiders Web</item>
        <item>The Mule</item>
    </string-array>

    <string-array name="movie_date">
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>December 14, 2018</item>
        <item>November 20, 2018</item>
        <item>October 25, 2018</item>
        <item>December 14, 2018</item>
    </string-array>

    <string-array name="movie_genre">
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Fantasy</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Crime, Thriller</item>
        <item>Crime, Drama, Thriller</item>
    </string-array>

    <string-array name="movie_desc">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpools PG-13 rendition of Deadpool 2 as a Princess Bride-esque story thats full of magic, wonder and zero Fs.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called Broly who theyve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so whats this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he’s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
    </string-array>

    <string-array name="movie_photo">
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_themule</item>
    </string-array>

</resources>
